--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,14 @@
     <string name="title_info">내정보</string>
 
     <string name="btn_map_my_location">내 위치</string>
+
+    <string name="info_title_login">로그인을 해주세요</string>
+    <string name="btn_info_title_login">로그인</string>
+    <string name="btn_info_title_logout">로그아웃</string>
+    <string name="btn_info_text_modify_info">내 정보 수정</string>
+    <string name="btn_info_text_modify_my_location">내 위치 정보</string>
+    <string name="btn_info_text_register_list">예약내역</string>
+
+    <string name="info_my_name">닉네임 / 이름</string>
+    <string name="info_my_info">정보</string>
 </resources>
