--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="title_list">상점</string>
     <string name="title_search">검색</string>
     <string name="title_info">내정보</string>
+    <string name="title_sign_up">회원가입</string>
 
     <string name="btn_map_my_location">내 위치</string>
 
@@ -28,4 +29,9 @@
     <string name="splash_permission_necessary">필수권한</string>
     <string name="splash_permission_necessary_current_location">현재 위치</string>
     <string name="splash_permission_necessary_current_location_text">지도에서 사용자의 현재 위치를 찾기 위해 필요합니다.</string>
+
+    <string name="sign_up_main_text">환영합니다 \nTokTok 계정을 \n만들어 볼까요?</string>
+    <string name="sign_up_account_label">계정 입력</string>
+    <string name="sign_up_password_label">비밀번호 입력</string>
+    <string name="sign_up_password_check_label">비밀번호 확인</string>
 </resources>
