Update some logics 1. for info menu button and 2. for sign in activity 3. product item view data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="title_map">지도</string>
     <string name="title_product">상품</string>
     <string name="title_search">검색</string>
+    <string name="title_favorit">즐겨찾기</string>
     <string name="title_info">내정보</string>
     <string name="title_sign_up">회원가입</string>
 
@@ -37,6 +38,6 @@
 
     <string name="product_list_item_text_sell_by_date">유통기한</string>
     <string name="product_list_item_text_price">정상가</string>
-    <string name="product_list_item_text_discounted_price">유통가</string>
+    <string name="product_list_item_text_discounted_price">판매가</string>
 
 </resources>
