--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="splash_permission_necessary_current_location">현재 위치</string>
     <string name="splash_permission_necessary_current_location_text">지도에서 사용자의 현재 위치를 찾기 위해 필요합니다.</string>
 
-    <string name="sign_up_main_text">환영합니다 \nTokTok 계정을 \n만들어 볼까요?</string>
+    <string name="sign_up_main_text">환영합니다 \n회원가입을위한\n정보를 입력해주세요</string>
     <string name="sign_up_account_label">계정 입력</string>
     <string name="sign_up_password_label">비밀번호 입력</string>
     <string name="sign_up_password_check_label">비밀번호 확인</string>
